# CheckersMinimax

./: Board.cpp  Board.h  CMakeLists.txt  Checker.cpp  Checker.h  Constants.h  GameProps.h  ScreenManager.cpp  ScreenManager.h  WorldChecker.cpp  WorldChecker.h  game.cpp  game.h
